--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.3.0"
+    "serve": "^14.2.4"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
